--- a/package.json
+++ b/package.json
@@ -2,31 +2,31 @@
     "name": "react.dev",
     "version": "0.0.0",
     "main": "/src/index.js",
+    "homepage": "https://Grace0124.github.io/homepage",
     "scripts": {
-      "predeploy": "npm run build",
-      "deploy": "gh-pages -d build",
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test --env=jsdom",
-      "eject": "react-scripts eject"
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
     },
     "dependencies": {
-      "react": "^19.1.0",
-      "react-dom": "^19.1.0",
-      "react-scripts": "^5.0.0"
+        "gh-pages": "^6.3.0",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
+        "react-scripts": "^5.0.0"
     },
-    "devDependencies": {},
     "browserslist": {
-      "production": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-      ],
-      "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-      ]
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
-  }
-  
+}
